--- a/cf_assignment/package.json
+++ b/cf_assignment/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
-		"start": "wrangler dev"
+		"start": "wrangler dev",
+		"seed": "node scripts/seed.js"
 	},
 	"devDependencies": {
 		"wrangler": "^4.64.0"
